[workspace]
members = [
    "crates/ironclad-diagnostics",
    "crates/ironclad-manifest",
    "crates/ironclad-emit",
]

[package]
name = "ironclad-storage"
version = "0.1.0"
edition = "2024"

[dependencies]
ironclad-diagnostics = { path = "crates/ironclad-diagnostics" }
ironclad-manifest = { path = "crates/ironclad-manifest" }
ironclad-emit = { path = "crates/ironclad-emit" }
pest = "2.7"
pest_derive = "2.7"
thiserror = "2"
miette = { version = "7", features = ["fancy"] }
clap = { version = "4", features = ["derive"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
